More fine-grained and language specific interpretation of primitive types (#1033)
* start of new type system

* Better type creation

* First attempt to move primitive types to languages

* Add default constructor for neo4j

* Revert change of gradle properties

* Remove some logic from TypeParser

* Trying with map instead of method

* Moving some code

* Fix json endless recursion

* Formatting

* String type

* Formatting

* Fix tests

* Another fix

* Adding type cache, the future of type management

* ++

* Simplify TypeParser.fixGenerics

* Less java regex magic

* Fix problem with NamespaceProvider

* Replace hardcoded generic characters in TypeParser

* Fix go generic and handle its [] notation

* Note on go map generic

* Make sonar happy

* Get rid of storage property in Type

* Remove qualifier property in Type

* Python fix

* Fix sonar bug

* Completely remove old qualifier class

* Simplify TypeParser

* Move modifier from ObjectType to NumericType

* Fix errors in subprojects

* One more fix

* Generate the type in the failing test

* Duplicate NumericType

* Move TypeCache to Component

* Move code incpg-neo4j

* Make the relation of simple types transient

* Removing typecache again

* Fix ogm loop again

* Fix VariableUsageResolver scope issue

* Add go types

* Remove constructors

* Fix python

* Reverted renaming of TypeManager

* Remove more constructors

---------

Co-authored-by: Christian Banse <oxisto@aybaze.com>
Co-authored-by: Christian Banse <christian.banse@aisec.fraunhofer.de>