@@ -179,9 +179,8 @@ public class TypeManager {
 
       // We need an additional check here, because of parsing or other errors, the AST node might
       // not necessarily be a template declaration.
-      if (node instanceof TemplateDeclaration) {
-        TemplateDeclaration template = (TemplateDeclaration) node;
-        ParameterizedType parameterizedType = getTypeParameter(template, name);
+      if (node instanceof TemplateDeclaration templateDeclaration) {
+        ParameterizedType parameterizedType = getTypeParameter(templateDeclaration, name);
         if (parameterizedType != null) {
           return parameterizedType;
         }
@@ -318,13 +317,13 @@ public class TypeManager {
    *     with parameterizedTypes as generics false otherwise
    */
   public boolean stopPropagation(Type type, Type newType) {
-    if (type instanceof ObjectType
-        && newType instanceof ObjectType
-        && ((ObjectType) type).getGenerics() != null
-        && ((ObjectType) newType).getGenerics() != null
+    if (type instanceof ObjectType typeObjectType
+        && newType instanceof ObjectType newObjectType
+        && typeObjectType.getGenerics() != null
+        && newObjectType.getGenerics() != null
         && type.getName().equals(newType.getName())) {
-      return containsParameterizedType(((ObjectType) newType).getGenerics())
-          && !(containsParameterizedType(((ObjectType) type).getGenerics()));
+      return containsParameterizedType(newObjectType.getGenerics())
+          && !(containsParameterizedType(typeObjectType.getGenerics()));
     }
     return false;
   }
@@ -482,7 +481,7 @@ public class TypeManager {
             .map(t -> typeToRecord.getOrDefault(t, null))
             .filter(Objects::nonNull)
             .map(r -> getAncestors(r, 0))
-            .collect(Collectors.toList());
+            .toList();
 
     // normalize/reverse depth: roots start at 0, increasing on each level
     for (Set<Ancestor> ancestors : allAncestors) {
